--- a/poc/src/main/resources/org/epa/mda/poc/UpdateReview-taskform.form
+++ b/poc/src/main/resources/org/epa/mda/poc/UpdateReview-taskform.form
@@ -5,7 +5,7 @@
 <property name="status" value="0"/>
 <field position="0" name="2077531012" type="CheckBox" id="2077531012">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Mark as Completequot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Mark as Completequot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
@@ -14,11 +14,153 @@
 </field>
 <field position="1" name="1450784871" type="CheckBox" id="1450784871">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Mark as Rejectedquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Mark as Rejectedquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
 <property name="outputBinding" value="rejectedOut"/>
 <property name="fieldClass" value="java.lang.Boolean"/>
 </field>
+<field position="2" name="product_companyName" type="InputText" id="2005624074">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;companyName (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/companyName"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="3" name="product_companyId" type="InputText" id="224151625">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;companyId (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/companyId"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="4" name="product_id" type="InputText" id="1464096459">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;id (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/id"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="5" name="product_address" type="InputText" id="591491699">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;address (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/address"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="6" name="product_city" type="InputText" id="1304926897">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;city (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/city"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="7" name="product_state" type="InputText" id="268635723">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;state (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/state"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="8" name="product_province" type="InputText" id="1489990617">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;province (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/province"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="9" name="product_zip" type="InputText" id="56587547">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;zip (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/zip"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="10" name="product_brandName" type="InputText" id="170083979">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;brandName (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/brandName"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="11" name="product_aromaticsPercent" type="InputTextInteger" id="1927533788">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;aromaticsPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/aromaticsPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="12" name="product_olefinsPercent" type="InputTextInteger" id="1055986048">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;olefinsPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/olefinsPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="13" name="product_saturatesPercent" type="InputTextInteger" id="1463036062">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;saturatesPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/saturatesPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="14" name="product_polynuclearOrgMatPercent" type="InputTextInteger" id="1543440925">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;polynuclearOrgMatPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/polynuclearOrgMatPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="15" name="product_sulfurPercent" type="InputTextInteger" id="1562863845">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;sulfurPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/sulfurPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="16" name="product_traceElementsPercent" type="InputTextInteger" id="904215180">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;traceElementsPercent (product)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="productIn/traceElementsPercent"/>
+<property name="fieldClass" value="java.lang.Integer"/>
+</field>
+<field position="17" name="9182654" type="InputText" id="9182654">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Report Yearquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="18" name="1160020882" type="InputShortDate" id="1160020882">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Datequot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="fieldClass" value="java.util.Date"/>
+</field>
+<field position="19" name="1505456991" type="InputTextArea" id="1505456991">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Name of Signerquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="20" name="1451695745" type="InputText" id="1451695745">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;Contact Personquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="isHTML" value="false"/>
+<property name="hideContent" value="false"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<dataHolder inputId="productIn" name="#E9E371" type="dataModelerEntry" outId="" value="org.epa.mda.poc.Product" id="product"/>
 </form>
